# szhhld

./: CMakeLists.txt  README.md  create_data.sh  creatlist.py  deploysmall.prototxt  exct_img.py  labelmap_voc.prototxt  list_all_files.py  main.cpp  one2four.py  saveimg.py  solver.prototxt  splitdata.py  splitimg.py  train.sh  train.txt  trainsmall.prototxt  try_bbox_image.py  txt2xml.py  xml2txt.py
